# vscode-bazel-cpp-example

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE
example_lib/: BUILD.bazel  example_test.cc
