load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "example_lib",
    visibility = ["//visibility:public"],
    hdrs = ["example.hh"],
    srcs = ["example.cc"],
)

cc_test(
    name = "example_test",
    srcs = ["example_test.cc"],
    deps = [
        ":example_lib",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

